Add support for RAG
